<resources>
    <string name="app_name">Test Task Application</string>
    <string name="enter_button_text">Войти</string>
    <string name="reg_button_text">Регистрация</string>
    <string name="email_prompt">email</string>
    <string name="password_prompt">password</string>
    <string name="register_button_text">Зарегистрировать</string>
    <string name="confirm_password_prompt">confirm password</string>
    <string name="registration_screen_title">Регистрация нового пользователя</string>
    <string name="exit_button_text">Выйти</string>
    <string name="error_dialog_title">Ошибка!</string>
    <string name="email_length_error">Email адрес должен состоять не менее, чем из 6 символов!</string>
    <string name="password_length_error">Пароль должен состоять не менее, чем из 4 символов!</string>
    <string name="password_equality_error">Пароли не совпадают! Введите один и тот же пароль дважды!</string>
    <string name="unknown_user_password">Пользователи с таким сочетанием email и password неизвестны.</string>
    <string name="preference_file_key">com.example.testtaskapplication.PREFERENCE_FILE_KEY</string>
    <string name="user_already_exist">Пользователь с таким email уже существует!</string>
    <string name="save_session_file_key">com.example.testtaskapplication.PREFERENCE_SAVE_SESSION_FILE_KEY</string>
    <string name="empty_mail">Email адрес необходим для регистрации</string>
    <string name="mail_wrong_format">Введите email адрес в формате \"name@example.com\"</string>
</resources>
